# 0lvins-experements

./: ProjectHome.md  README.md
android/AirScanner/: .project  AndroidManifest.xml
bash/: replace_exif_exiftool.sh  replace_exif_jhead.sh  xorg.update.sh
bash/builds/: mesa-build.sh  renegate-build.sh
bash/chromebook/: build.sh  create.sh  kernel.its
c++/srselectable/: clselectable.cpp  conects.h  exeption.cpp  exeption.h  initconect.cpp  initconect.h  selecableconect.cpp  selectableconect.h  srselectable.cpp
c/apacheproxy/: AUTHORS  makefile  mod_prx.c  mod_prx.conf
c/astc/: .gitignore  Makefile  astc_4x4.c
c/atag_parse/: Makefile  atags_parse.c
c/framebuffer/: .gitignore  Makefile  fb.c  font8x8.h  run.sh  setns.c  trace.c  uname.c  unshare.c  utils.c  utils.h
c/gif/: gif_decode.c
c/icesky/: IceSky.c  IceSky.h  Makefile  fullbase.db
c/libcroco/: cssanno-html.c  cssanno-xml.c
c/pixpuf-gtk/: 01.01.2012.struct.diff  02.01.2012.struct.diff  07.01.2012_x10_.struct.diff  07.01.2012_x3_.struct.diff  08.01.2012_final_.struct.diff  08.01.2012_x3_.struct.diff  30.12.2011.struct.diff  31.12.2011.struct.diff  gdk-pixbuf-2.23.3.use_new_file_loader.patch  main-anim.c  main-prog-anim.c  main-prog.c
c/sdl/: haptic.c
c/speedscan/: config.h.in  configure  configure.ac
c/speedscan/autom4te.cache/: output.0  traces.0  traces.1
c/speedscan/src/: Makefile.am  Makefile.in  speedscan.c
c/strspn/: Makefile  strcspn.c  strspn.c
erlang/: wurfl.erl
js/: graph_html.html
js/map-tests/: doc.kml  (+5 more)
php/: minimize_html.php
python/: minimize_html.py  sunrise.py
(+43 files in other folders)
